feat: [stable][work][tested] Added new samples for cucumber tests